@@ -1,32 +1,34 @@
 package net.nekozouneko.anni.arena;
 
-import com.google.common.base.Preconditions;
-import com.google.common.collect.BiMap;
-import com.google.common.collect.EnumHashBiMap;
-import com.google.common.collect.HashBiMap;
-import com.google.common.collect.Multimap;
 import com.sk89q.worldedit.bukkit.BukkitAdapter;
 import com.sk89q.worldguard.WorldGuard;
 import com.sk89q.worldguard.protection.flags.Flags;
 import com.sk89q.worldguard.protection.flags.StateFlag;
 import com.sk89q.worldguard.protection.managers.RegionManager;
 import com.sk89q.worldguard.protection.regions.*;
-import lombok.AllArgsConstructor;
+import com.viaversion.viaversion.api.Via;
+import io.papermc.paper.registry.keys.GameRuleKeys;
 import lombok.Getter;
 import lombok.Setter;
-import net.md_5.bungee.api.ChatMessageType;
-import net.md_5.bungee.api.chat.TextComponent;
+import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
 import net.nekozouneko.anni.ANNIConfig;
 import net.nekozouneko.anni.ANNIPlugin;
+import net.nekozouneko.anni.arena.manager.BossbarManager;
+import net.nekozouneko.anni.arena.manager.ScoreboardManager;
 import net.nekozouneko.anni.arena.spectator.SpectatorManager;
 import net.nekozouneko.anni.arena.team.ANNITeam;
-import net.nekozouneko.anni.board.BoardManager;
-import net.nekozouneko.anni.kit.ANNIKit;
-import net.nekozouneko.anni.kit.AbstractKit;
+import net.nekozouneko.anni.game.Nexus;
+import net.nekozouneko.anni.game.save.SaveDataRepository;
+import net.nekozouneko.anni.game.team.TeamManager;
 import net.nekozouneko.anni.item.DefenseArtifact;
+import net.nekozouneko.anni.kit.ANNIKit;
+import net.nekozouneko.anni.kit.Kit;
 import net.nekozouneko.anni.listener.PlayerDamageListener;
 import net.nekozouneko.anni.map.ANNIMap;
 import net.nekozouneko.anni.message.MessageManager;
+import net.nekozouneko.anni.message.TranslationManager;
+import net.nekozouneko.anni.point.PlayerListService;
+import net.nekozouneko.anni.task.RechargeManager;
 import net.nekozouneko.anni.util.CmnUtil;
 import net.nekozouneko.anni.util.FileUtil;
 import net.nekozouneko.anni.util.VaultUtil;
@@ -37,23 +39,19 @@ import net.nekozouneko.commons.spigot.world.Worlds;
 import org.bukkit.*;
 import org.bukkit.attribute.Attribute;
 import org.bukkit.block.Block;
-import org.bukkit.boss.BarColor;
-import org.bukkit.boss.BarStyle;
-import org.bukkit.boss.KeyedBossBar;
 import org.bukkit.entity.EntityType;
 import org.bukkit.entity.Firework;
 import org.bukkit.entity.Player;
+import org.bukkit.event.inventory.InventoryType;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.FireworkMeta;
+import org.bukkit.persistence.PersistentDataContainer;
 import org.bukkit.persistence.PersistentDataType;
 import org.bukkit.potion.PotionEffect;
 import org.bukkit.potion.PotionEffectType;
 import org.bukkit.scheduler.BukkitRunnable;
-import org.bukkit.scoreboard.Scoreboard;
-import org.bukkit.scoreboard.Team;
 
 import java.io.IOException;
-import java.text.SimpleDateFormat;
 import java.util.*;
 import java.util.Map.Entry;
 import java.util.logging.Logger;
@@ -63,29 +61,25 @@ public class ANNIArena extends BukkitRunnable {
 
     private static final Random rand = new Random();
 
-    @Getter @AllArgsConstructor
-    private static class SaveData {
-        private final boolean isSpectator;
-        private final ANNITeam team;
-        private final ItemStack[] inventory;
-        private final float exp;
-        private final int level;
-        private final double health;
-    }
-
     private final ANNIPlugin plugin;
     private final MessageManager mm;
+    private final TranslationManager tm;
     @Getter
-    private final String id;
+    private final BossbarManager bossbarManager;
+    @Getter
+    private VoteManager voteManager;
+    private final ScoreboardManager scoreboardManager;
+    @Getter
+    private RechargeManager rechargeManager = null;
+    @Getter
+    private final String id = "current";
 
     private final Set<Player> players = new HashSet<>();
-
-    private final BiMap<ANNITeam, Team> teams = HashBiMap.create(4);
-    private final Map<ANNITeam, Boolean> enabledTeams = new EnumMap<>(ANNITeam.class);
 
     @Getter @Setter
     private ArenaState state = ArenaState.WAITING;
 
+    @Getter @Setter
     private ANNIMap map = null;
     private World copy = null;
 
@@ -95,33 +89,28 @@ public class ANNIArena extends BukkitRunnable {
     private long timer = 0;
     private int fireworkTimer = 0;
 
-    private final Map<ANNITeam, Integer> nexus = new EnumMap<>(ANNITeam.class);
     private final Map<UUID, String> kit = new HashMap<>();
-    private final Map<UUID, SaveData> savedData = new HashMap<>();
 
-    private final KeyedBossBar bb;
+    @Getter
+    private final TeamManager teamManager;
+    private final SaveDataRepository saveDataRepository;
+    private final PlayerListService playerListService;
 
-    public ANNIArena(ANNIPlugin plugin, String id) {
-        Preconditions.checkArgument(plugin != null, "Argument 'plugin' cannot be null.");
-        Preconditions.checkArgument(id.length() < 9, "Id length limit is 8! (" + id.length() + ")");
-
+    public ANNIArena(ANNIPlugin plugin, TeamManager teamManager, SaveDataRepository saveDataRepository, PlayerListService playerListService) {
         this.plugin = plugin;
         this.mm = plugin.getMessageManager();
-        this.id = id;
-
-        this.bb = Bukkit.createBossBar(
-                new NamespacedKey(plugin, id),
-                "",
-                BarColor.BLUE,
-                BarStyle.SOLID
+        this.tm = plugin.getTranslationManager();
+        this.voteManager = new VoteManager(plugin.getMapManager().getMaps().stream()
+                .filter(ANNIMap::canUseOnArena)
+                .map(ANNIMap::getId)
+                .collect(Collectors.toSet())
         );
+        this.bossbarManager = new BossbarManager(this);
 
-        createTeams();
-
-        for (ANNITeam at : ANNITeam.values()) {
-            if (!ANNIConfig.isTeamEnabled(at))
-                disableTeam(at);
-        }
+        this.teamManager = teamManager;
+        this.saveDataRepository = saveDataRepository;
+        this.playerListService = playerListService;
+        this.scoreboardManager = new ScoreboardManager(this, plugin.getBoardManager(), plugin.getTranslationManager(), Via.getAPI());
     }
 
     public void join(Player player) {
@@ -133,63 +122,90 @@ public class ANNIArena extends BukkitRunnable {
         if (state.getId() <= 0) {
             initPlayer(player);
             if (plugin.getLobby() != null) player.teleport(plugin.getLobby());
+
+            playerListService.showPlayerLevels(player.getUniqueId());
             return;
         }
 
-        SaveData data = savedData.remove(player.getUniqueId());
-        ANNITeam team = data == null ? assignTeam() : data.getTeam();
-        setTeam(player, team);
+        playerListService.reset(player.getUniqueId());
 
-        if (isNexusLost(team)) {
+        ANNITeam color;
+        if (!saveDataRepository.canLoad(player.getUniqueId())) {
+            color = assignTeam();
+
+            teamManager.leave(player.getUniqueId());
+            teamManager.join(color, player.getUniqueId());
+
             Players.clearPotionEffects(player);
             initPlayer(player);
-            SpectatorManager.add(player);
-            player.teleport(map.getSpawnOrDefault(team).toLocation(copy));
-            return;
+            player.getInventory().setContents(ANNIKit.teamColor(getKit(player), player.locale(), color));
+            player.teleport(map.getSpawnOrDefault(color).toLocation(copy));
+        }
+        else {
+            var result = saveDataRepository.load(player.getUniqueId());
+            saveDataRepository.remove(player.getUniqueId());
+
+            color = teamManager.getTeamColorByPlayer(player.getUniqueId());
+            if (!result.inventory()) {
+                player.teleportAsync(map.getSpawn(color).toLocation(copy));
+                initPlayer(player);
+            }
+            else if (!result.location()) {
+                player.teleport(map.getSpawnOrDefault(color).toLocation(copy));
+            }
+
+            if (teamManager.getTeam(color).isLost()) {
+                Players.clearPotionEffects(player);
+                initPlayer(player);
+                SpectatorManager.add(player);
+                player.teleport(map.getSpawnOrDefault(color).toLocation(copy));
+            }
         }
 
         player.setGameMode(GameMode.SURVIVAL);
-        if (data != null) {
-            player.getInventory().setContents(data.getInventory());
-            player.setExp(data.getExp());
-            player.setLevel(data.getLevel());
-            player.setHealth(data.getHealth());
-        }
-        else {
-            Players.clearPotionEffects(player);
-            initPlayer(player);
-            player.getInventory().setContents(ANNIKit.teamColor(getKit(player), team));
-            player.teleport(map.getSpawnOrDefault(team).toLocation(copy));
-        }
 
-
-        player.sendMessage(mm.buildBigChar(CmnUtil.numberToChar(state.getId()), Character.toString(team.getCCChar()),
-                (Object[]) mm.buildArray("notify.big.mid_join", team.getTeamName())
+        player.sendMessage(mm.buildBigChar(CmnUtil.numberToChar(state.getId()), Character.toString(color.getCCChar()),
+                (Object[]) mm.buildArray("notify.big.mid_join", LegacyComponentSerializer.legacyAmpersand().serialize(tm.component(color.getNameKey())))
         ));
     }
 
     public void leave(Player player) {
         players.remove(player);
 
-        if (state.getId() > 0 && getTeamByPlayer(player) != null && !PlayerDamageListener.isFighting(player)) {
-            savedData.put(
-                    player.getUniqueId(),
-                    new SaveData(
-                            isNexusLost(getTeamByPlayer(player)) && SpectatorManager.isSpectating(player),
-                            getTeamByPlayer(player),
-                            player.getInventory().getContents(),
-                            player.getExp(),
-                            player.getLevel(),
-                            player.getHealth()
-                    )
-            );
+        if (state.getId() > 0 && teamManager.getTeamColorByPlayer(player.getUniqueId()) != null) {
+            var container = WorldGuard.getInstance().getPlatform().getRegionContainer();
+            var regionManager = container.get(BukkitAdapter.adapt(copy));
+            var enemyRegions = new ArrayList<>(map.getTeamRegions().values());
+            enemyRegions.remove(map.getTeamRegion(getTeamManager().getTeamColorByPlayer(player.getUniqueId())));
+            var regions = regionManager.getApplicableRegions(BukkitAdapter.asBlockVector(player.getLocation())).getRegions()
+                    .stream().map(ProtectedRegion::getId);
+
+            boolean isInEnemyRegion = regions.anyMatch(enemyRegions::contains);
+            boolean isFighting = PlayerDamageListener.isFighting(player);
+
+            if (isFighting || isInEnemyRegion) {
+                Arrays.stream(player.getInventory().getContents())
+                        .filter(Objects::nonNull)
+                        .filter(is -> {
+                            PersistentDataContainer pdc = is.getItemMeta().getPersistentDataContainer();
+
+                            return pdc.getOrDefault(
+                                    new NamespacedKey(ANNIPlugin.getInstance(), "kit-item"),
+                                    PersistentDataType.INTEGER, 0
+                            ) == 0;
+                        })
+                        .forEach(item -> player.getWorld().dropItemNaturally(player.getLocation(), item));
+
+                saveDataRepository.save(player.getUniqueId(), isFighting, isInEnemyRegion);
+            }
+            else saveDataRepository.save(player.getUniqueId(), false, false);
+
             player.getInventory().clear();
         }
 
-        if (getTeamByPlayer(player) != null) getTeam(getTeamByPlayer(player)).removePlayer(player);
+        teamManager.leave(player.getUniqueId());
 
         player.setScoreboard(plugin.getServer().getScoreboardManager().getMainScoreboard());
-        bb.removePlayer(player);
     }
 
     public Set<Player> getPlayers() {
@@ -200,115 +216,15 @@ public class ANNIArena extends BukkitRunnable {
         return players.contains(player);
     }
 
-    // Team
-
-    private void createTeams() {
-        final Scoreboard sb = plugin.getPluginBoard();
-
-        Team r = sb.registerNewTeam(id + "-red");
-        Team b = sb.registerNewTeam(id + "-blue");
-        Team g = sb.registerNewTeam(id + "-green");
-        Team y = sb.registerNewTeam(id + "-yellow");
-
-        r.setDisplayName(mm.build("team.red.display"));
-        r.setPrefix(mm.build("team.red.prefix"));
-        r.setColor(org.bukkit.ChatColor.RED);
-        r.setAllowFriendlyFire(false);
-        r.setCanSeeFriendlyInvisibles(true);
-
-        b.setDisplayName(mm.build("team.blue.display"));
-        b.setPrefix(mm.build("team.blue.prefix"));
-        b.setColor(org.bukkit.ChatColor.BLUE);
-        b.setAllowFriendlyFire(false);
-        b.setCanSeeFriendlyInvisibles(true);
-
-        g.setDisplayName(mm.build("team.green.display"));
-        g.setPrefix(mm.build("team.green.prefix"));
-        g.setColor(org.bukkit.ChatColor.GREEN);
-        g.setAllowFriendlyFire(false);
-        g.setCanSeeFriendlyInvisibles(true);
-
-        y.setDisplayName(mm.build("team.yellow.display"));
-        y.setPrefix(mm.build("team.yellow.prefix"));
-        y.setColor(org.bukkit.ChatColor.YELLOW);
-        y.setAllowFriendlyFire(false);
-        y.setCanSeeFriendlyInvisibles(true);
-
-        teams.put(ANNITeam.RED, r);
-        teams.put(ANNITeam.BLUE, b);
-        teams.put(ANNITeam.GREEN, g);
-        teams.put(ANNITeam.YELLOW, y);
-        teams.keySet().forEach((t) -> enabledTeams.put(t, true));
-    }
-
     private void deleteTeams() {
-        teams.values().forEach(Team::unregister);
-        teams.values().clear();
-    }
-
-    public void enableTeam(ANNITeam team) {
-        enabledTeams.put(team, true);
-    }
-
-    public void disableTeam(ANNITeam team) {
-        enabledTeams.put(team, false);
-    }
-
-    public boolean isEnabledTeam(ANNITeam team) {
-        return enabledTeams.getOrDefault(team, true);
-    }
-
-    public Map<ANNITeam, Boolean> getEnabledTeams() {
-        return Collections.unmodifiableMap(enabledTeams);
-    }
-
-    public void setTeam(Player player, ANNITeam team) {
-        if (player.getScoreboard() != plugin.getPluginBoard()) player.setScoreboard(plugin.getPluginBoard());
-
-        getTeams(false).inverse().keySet().forEach(team1 -> team1.removePlayer(player));
-        if (team != null) {
-            getTeam(team).addPlayer(player);
-        }
-    }
-
-    public Team getTeam(ANNITeam team) {
-        return teams.get(team);
-    }
-
-    public ANNITeam getTeam(Team team) {
-        return teams.inverse().get(team);
-    }
-
-    public ANNITeam getTeamByPlayer(Player player) {
-        Team t = plugin.getPluginBoard().getPlayerTeam(player);
-        return t != null ? getTeam(t) : null;
-    }
-
-    public BiMap<ANNITeam, Team> getTeams() {
-        return getTeams(true);
-    }
-
-    public BiMap<ANNITeam, Team> getTeams(boolean enabledOnly) {
-        BiMap<ANNITeam, Team> res = EnumHashBiMap.create(ANNITeam.class);
-
-        teams.entrySet().stream()
-                .filter(t -> !enabledOnly || enabledTeams.getOrDefault(t.getKey(), true))
-                .forEach(e -> res.put(e.getKey(), e.getValue()));
-
-        return res;
+        teamManager.getTeams().keySet().forEach(teamManager::disable);
     }
 
     public Set<Player> getTeamPlayers(ANNITeam team) {
-        Set<Player> ps = new HashSet<>();
-
-        teams.get(team).getPlayers().stream()
-                .filter(OfflinePlayer::isOnline)
-                .forEach((off) -> {
-                    Player p = Bukkit.getPlayer(off.getUniqueId());
-                    if (p != null && players.contains(p)) ps.add(p);
-                });
-
-        return ps;
+        return teamManager.getTeam(team).getPlayers().stream()
+                .map(Bukkit::getPlayer)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toSet());
     }
 
     // Timer
@@ -324,57 +240,35 @@ public class ANNIArena extends BukkitRunnable {
     // Nexus
 
     public Integer getNexusHealth(ANNITeam team) {
-        return nexus.get(team);
-    }
-
-    public void setNexusHealth(ANNITeam team, int health) {
-        nexus.put(team, health);
-    }
-
-    public void healNexusHealth(ANNITeam team, int heal) {
-        if (!isNexusLost(team)) {
-            nexus.put(team, nexus.get(team) + heal);
-        }
-        else throw new IllegalStateException("Team" + team.name() + " is nexus lost.");
+        return teamManager.getTeam(team).getNexus().getHealth();
     }
 
     public void damageNexusHealth(ANNITeam team, int damage, Player player) {
         if (damage <= 0) return;
-        if (!isNexusLost(team)) {
-            int health = nexus.get(team) - damage;
-            nexus.put(team, health <= 0 ? null : health);
+
+        Nexus nexus = teamManager.getTeam(team).getNexus();
+
+        if (!teamManager.getTeam(team).getNexus().isDestroyed()) {
+            nexus.damage(damage);
+            int health = nexus.getHealth();
 
             if (player != null) {
-                double leftHealth = CmnUtil.bossBarProgress(ANNIConfig.getDefaultHealth(), health);
-                if (leftHealth <= 0.2) bb.setColor(BarColor.RED);
-                else if (leftHealth <= 0.5) bb.setColor(BarColor.YELLOW);
-                else bb.setColor(BarColor.GREEN);
-
-                bb.setProgress(leftHealth);
-
-                bb.setTitle(ANNIPlugin.getInstance().getMessageManager().build(
-                        "bossbar.damaged_nexus",
-                        player.getName(), team.getTeamName()
-                ));
+                bossbarManager.damageNexus(team, player, health);
                 getTeamPlayers(team).forEach(p1 -> {
-                    p1.spigot().sendMessage(ChatMessageType.ACTION_BAR, new TextComponent(
-                            mm.build("actionbar.nexus_alert", player.getName())
-                    ));
+                    p1.sendActionBar(tm.component("actionbar.nexus_alert", player.name()));
                     p1.playSound(p1.getLocation(), Sound.BLOCK_NOTE_BLOCK_HARP, 1, 2);
                 });
 
                 VaultUtil.ifAvail((eco) -> {
-                    if (getTeamByPlayer(player) == null) return;
+                    if (teamManager.getTeamColorByPlayer(player.getUniqueId()) == null) return;
 
-                    getTeamPlayers(getTeamByPlayer(player)).forEach(teammate -> {
-                        eco.depositPlayer(teammate, 3);
-                        teammate.sendMessage(
-                                mm.build("notify.deposit_points", "3", mm.build("gui.shop.full_ext"))
-                        );
+                    getTeamPlayers(teamManager.getTeamColorByPlayer(player.getUniqueId())).forEach(teammate -> {
+                        ANNIPlugin.getInstance().getPointManager().givePoint(teammate, 3);
+                        teammate.sendMessage(tm.component(teammate, "money.deposit", "3"));
                     });
                 });
 
-                if (ANNIKit.get(getKit(player)) == ANNIKit.WORKER && !isNexusLost(getTeamByPlayer(player))) {
+                if (ANNIKit.get(getKit(player)) == ANNIKit.WORKER && !nexus.isDestroyed()) {
                     boolean isPass;
                     switch (getState()) {
                         case PHASE_TWO: {
@@ -395,18 +289,18 @@ public class ANNIArena extends BukkitRunnable {
                         }
                     }
 
-                    if (isPass) healNexusHealth(getTeamByPlayer(player), 1);
+                    if (isPass) teamManager.getTeamByPlayer(player.getUniqueId()).getNexus().heal(1);
                 }
             }
             else {
                 getTeamPlayers(team).forEach(p1 -> p1.playSound(p1.getLocation(), Sound.BLOCK_NOTE_BLOCK_HARP, 1, 2));
             }
 
-            if (isNexusLost(team)) {
+            if ((nexus.isDestroyed())) {
                 for (String s :
                         mm.buildBigChar(
                                 team.getBigChar(),
-                                Character.toString(getTeamByPlayer(player).getCCChar()),
+                                Character.toString(teamManager.getTeamColorByPlayer(player.getUniqueId()).getCCChar()),
                                 (Object[]) mm.buildArray("notify.big.lost_nexus",
                                         team.getColorCode() + team.getTeamName(),
                                         player != null ? player.getName() : "-----"
@@ -420,25 +314,13 @@ public class ANNIArena extends BukkitRunnable {
         else throw new IllegalStateException("Team " + team.name() + " is already nexus lost.");
     }
 
-    public boolean isNexusLost(ANNITeam team) {
-        return nexus.get(team) == null || nexus.get(team) <= 0;
-    }
-
     public void restoreNexus(ANNITeam team, Integer health) {
-        if (isNexusLost(team)) {
-            nexus.put(team, health == null ? 100 : health);
+        if (teamManager.getTeam(team).getNexus().isDestroyed()) {
+            teamManager.getTeam(team).getNexus().setHealth(health);
             BukkitAdapter.adapt(copy, map.getNexus(team).getLocation())
                     .getBlock().setType(Material.END_STONE);
         }
         else throw new IllegalStateException("Nexus is now active");
-    }
-
-    public ANNIMap getMap() {
-        return map;
-    }
-
-    public void setMap(ANNIMap map) {
-        this.map = map;
     }
 
     public World getCopyWorld() {
@@ -454,12 +336,10 @@ public class ANNIArena extends BukkitRunnable {
         log.info("Starting game... (ID: " + id + ")");
         try {
             if (map == null) {
-                if (VoteManager.isNowVoting(id) && !VoteManager.getResult(id).isEmpty()) {
-                    List<Entry<ANNIMap, Integer>> result = getMapRanking(VoteManager.endVote(id));
-                    for (Entry<ANNIMap, Integer> anniMapIntegerEntry : result) {
-                        map = anniMapIntegerEntry.getKey();
-                        if (map.canUseOnArena()) break;
-                    }
+                if (voteManager != null && !voteManager.isEmpty()) {
+                    map = plugin.getMapManager().getMap(voteManager.getResult());
+                    if (map != null && !map.canUseOnArena()) map = null;
+                    voteManager = null;
                 }
 
                 if (map == null) {
@@ -479,6 +359,7 @@ public class ANNIArena extends BukkitRunnable {
                 log.warning("Copy map failed.");
                 return false;
             }
+            copy.setGameRule(GameRules.LOCATOR_BAR, false);
             log.info("Copy complete.");
 
             RegionContainer rc = WorldGuard.getInstance().getPlatform().getRegionContainer();
@@ -498,8 +379,8 @@ public class ANNIArena extends BukkitRunnable {
                         log.info(s + " is polygon region.");
                         newpr = new ProtectedPolygonalRegion(s,
                                 pr.getPoints(),
-                                pr.getMinimumPoint().getY(),
-                                pr.getMaximumPoint().getY()
+                                pr.getMinimumPoint().y(),
+                                pr.getMaximumPoint().y()
                         );
                     }
                     else {
@@ -554,35 +435,43 @@ public class ANNIArena extends BukkitRunnable {
                 });
             }
 
-            getTeams(false).keySet()
-                    .forEach(at -> {
-                        Block bl = BukkitAdapter.adapt(copy, map.getNexus(at).getLocation()).getBlock();
-                        if (!isEnabledTeam(at))
-                            bl.setType(Material.BEDROCK);
-                        else bl.setType(Material.END_STONE);
-                    });
+            for (ANNITeam color : ANNITeam.values()) {
+                Block nexusBlock = BukkitAdapter.adapt(copy, map.getNexus(color).getLocation()).getBlock();
+                if (!teamManager.isEnabled(color))
+                    nexusBlock.setType(Material.BEDROCK);
+                else {
+                    teamManager.getTeam(color).getNexus().setHealth(ANNIConfig.getDefaultHealth());
+                    nexusBlock.setType(Material.END_STONE);
+                }
+            }
 
             log.info("Assigning players...");
-            savedData.clear();
-            players.forEach(player -> setTeam(player, assignTeam()));
-            nexus.clear();
-            getTeams().forEach((at, team) -> {
-                setNexusHealth(at, ANNIConfig.getDefaultHealth());
-                Location sl = map.getSpawnOrDefault(at).toLocation(copy);
-                team.getPlayers().stream()
-                        .filter(OfflinePlayer::isOnline)
-                        .map(offp -> Bukkit.getPlayer(offp.getUniqueId()))
-                        .forEach(p -> {
-                            p.teleport(sl);
-                            p.setGameMode(GameMode.SURVIVAL);
-                            initPlayer(p);
-                            p.getActivePotionEffects().forEach(effect -> p.removePotionEffect(effect.getType()));
-                            p.getInventory().setContents(ANNIKit.teamColor(getKit(p), at));
-                        });
-                for (String s : mm.buildBigChar('1', Character.toString(at.getCCChar()),
-                        (Object[]) mm.buildArray("notify.big.started", at.getTeamName())
-                )) broadcast(s, at);
+            saveDataRepository.clear();
+            players.forEach(player -> {
+                playerListService.reset(player.getUniqueId());
+                teamManager.join(assignTeam(), player.getUniqueId());
             });
+            teamManager.getTeams().forEach((color, team) -> {
+                team.getNexus().setHealth(ANNIConfig.getDefaultHealth());
+                team.getNexus().setMaxHealth(ANNIConfig.getDefaultHealth());
+
+                Location teamSpawn = map.getSpawnOrDefault(color).toLocation(copy);
+                team.getPlayers().stream()
+                        .map(Bukkit::getPlayer)
+                        .filter(Objects::nonNull)
+                        .forEach(player -> {
+                            player.teleport(teamSpawn);
+                            player.setGameMode(GameMode.SURVIVAL);
+                            initPlayer(player);
+                            player.getInventory().setContents(ANNIKit.teamColor(getKit(player), player.locale(), color));
+                        });
+                for (String s : mm.buildBigChar('1', Character.toString(color.getCCChar()),
+                        (Object[]) mm.buildArray("notify.big.started", color.getTeamName())
+                )) broadcast(s, color);
+            });
+
+            rechargeManager = new RechargeManager();
+            rechargeManager.runTaskTimer(plugin, 0, 10);
 
             setState(ArenaState.PHASE_ONE);
             setTimer(ArenaState.PHASE_ONE.nextPhaseIn());
@@ -603,26 +492,25 @@ public class ANNIArena extends BukkitRunnable {
         try {
             log.info("Initializing players...");
             SpectatorManager.clear();
-            savedData.clear();
+            saveDataRepository.clear();
+            ANNIPlugin.getInstance().getFurnaceManager().clear();
             plugin.getCooldownManager().clear();
             players.forEach(player -> {
                 player.spigot().respawn();
-                player.setItemOnCursor(null);
-                player.closeInventory();
                 initPlayer(player);
-                Bukkit.getScheduler().runTask(plugin, () -> player.getInventory().clear());
                 Players.clearPotionEffects(player);
                 player.teleport(plugin.getLobby());
+                player.setFlying(player.getGameMode() == GameMode.CREATIVE || player.getGameMode() == GameMode.SPECTATOR);
+                playerListService.showPlayerLevels(player.getUniqueId());
             });
             log.info("Removing player from team...");
-            teams.values().forEach(team -> {
-                    team.getEntries().forEach(team::removeEntry);
-                    log.info(team.getEntries().toString());
-            });
+            teamManager.getTeams().values().forEach(team ->
+                team.getPlayers().forEach(teamManager::leave)
+            );
             log.info("Cancelling tasks...");
             DefenseArtifact.cancelAllTasks();
-            log.info("Initializing nexus...");
-            nexus.clear();
+            if (rechargeManager != null && !rechargeManager.isCancelled()) rechargeManager.cancel();
+            rechargeManager = null;
             log.info("Initializing map...");
             map = null;
             if (copy != null) {
@@ -652,7 +540,7 @@ public class ANNIArena extends BukkitRunnable {
 
                 fireworkTimer = 0;
             }
-            if (VoteManager.isNowVoting(id)) VoteManager.endVote(id);
+            voteManager = null;
         }
         catch (IOException e) { e.printStackTrace(); }
 
@@ -664,16 +552,27 @@ public class ANNIArena extends BukkitRunnable {
         plugin.getLogger().info(message);
     }
 
+    public void broadcastTranslated(String key, Object... args) {
+        Bukkit.getOnlinePlayers().forEach(player -> player.sendMessage(tm.component(player, key, args)));
+        plugin.getComponentLogger().info(tm.component(key, args));
+    }
+
     public void broadcast(String message, ANNITeam team) {
         getTeamPlayers(team).forEach(p -> p.sendMessage(message));
         plugin.getLogger().info(message);
     }
 
-    public void setKit(Player player, AbstractKit ki) {
+    public void broadcastTranslated(ANNITeam team, String key, Object... args) {
+        getTeamPlayers(team).forEach(player -> player.sendMessage(tm.component(player, key, args)));
+        plugin.getComponentLogger().info(tm.component(key, args));
+    }
+
+    public void setKit(Player player, Kit ki) {
+        plugin.getFurnaceManager().remove(player);
         kit.put(player.getUniqueId(), ki.getId());
     }
 
-    public AbstractKit getKit(Player player) {
+    public Kit getKit(Player player) {
         String id = kit.get(player.getUniqueId());
         return ANNIKit.getAbsKitOrCustomById(id);
     }
@@ -693,68 +592,67 @@ public class ANNIArena extends BukkitRunnable {
 
             if (map == null) {
                 if (state == ArenaState.STARTING && getTimer() <= 10) {
-                    if (VoteManager.isNowVoting(id)) {
-                        List<Map.Entry<ANNIMap, Integer>> l = getMapRanking(VoteManager.endVote(id));
-                        if (l.isEmpty() || Collections3.allValueEquals(l, l.get(0))) {
-                            List<ANNIMap> filtered = plugin.getMapManager().getMaps().stream()
+                    if (voteManager != null) {
+                        if (voteManager.isEmpty()) {
+                            List<ANNIMap> maps = plugin.getMapManager().getMaps().stream()
                                     .filter(ANNIMap::canUseOnArena)
                                     .collect(Collectors.toList());
-                            map = filtered.get(rand.nextInt(filtered.size()));
+                            map = maps.get(rand.nextInt(maps.size()));
                         }
-                        else map = l.get(0).getKey();
+                        else map = plugin.getMapManager().getMap(voteManager.getResult());
                     }
                 }
                 else {
-                    Set<Object> choices = plugin.getMapManager().getMaps().stream()
+                    Set<String> choices = plugin.getMapManager().getMaps().stream()
                             .filter(ANNIMap::canUseOnArena)
-                            .map(m -> (Object) m.getId())
+                            .map(ANNIMap::getId)
                             .collect(Collectors.toSet());
 
-                    if (VoteManager.isNowVoting(id)) {
-                        VoteManager.updateChoices(
-                                id, choices
-                        );
-                    } else VoteManager.startVote(id, choices);
+                    if (voteManager != null) {
+                        voteManager.updateChoices(choices);
+                    }
+                    else voteManager = new VoteManager(choices);
                 }
             }
-            else if (VoteManager.isNowVoting(id)) VoteManager.endVote(id);
+            else voteManager = null;
         }
 
-        updateBossBar();
-        updateScoreboard();
+        bossbarManager.update();
+        scoreboardManager.update();
         updatePhase();
 
         if (state == ArenaState.GAME_OVER) launchFireworkRocket();
 
-        if (state.getId() >= 0) {
+        if (state.isInArena()) {
             if (state.getId() > 0) {
                 // プレイヤー数が0のチームを退場させる
-                getTeams().keySet().forEach(at -> {
-                    if (!isNexusLost(at) && getTeamPlayers(at).isEmpty()) {
-                        nexus.put(at, null);
-                        broadcast(plugin.getMessageManager().build("notify.no_player_team", at.getTeamName()));
+                teamManager.getTeams().keySet().forEach(color -> {
+                    var team = teamManager.getTeam(color);
+                    if (!team.getNexus().isDestroyed() && team.getPlayers().isEmpty()) {
+                        team.getNexus().setHealth(0);
+                        broadcastTranslated("notify.no_player_team", tm.component(color.getNameKey()));
                     }
                 });
 
                 if (state == ArenaState.PHASE_FIVE) {
-                    getTeams().keySet().forEach((at) -> {
+                    teamManager.getTeams().keySet().forEach((at) -> {
                         // (ネクサスを失ったもしくは、ネクサスの体力が1以下) ではないなら
-                        if (!(isNexusLost(at) || getNexusHealth(at) <= 1)) {
+                        if (!(teamManager.getTeam(at).isLost() || getNexusHealth(at) <= 1)) {
                             damageNexusHealth(at, 1, null);
                         }
                     });
                 }
 
                 // ネクサスを失っていないチーム数を調べる
-                List<ANNITeam> living = getTeams().keySet().stream()
-                        .filter(team -> !isNexusLost(team))
-                        .collect(Collectors.toList());
+                List<ANNITeam> living = teamManager.getTeams().keySet().stream()
+                        .filter(team -> !teamManager.getTeam(team).isLost())
+                        .toList();
 
                 // もし1以下なら
                 if (living.size() <= 1) {
                     // もし1なら
                     if (living.size() == 1) {
-                        ANNITeam won = living.get(0);
+                        ANNITeam won = living.getFirst();
 
                         for (String s : mm.buildBigChar(
                                 'e', Character.toString(won.getCCChar()),
@@ -763,12 +661,12 @@ public class ANNIArena extends BukkitRunnable {
                                 ))
                         )
                             broadcast(s);
-                        VaultUtil.ifAvail((eco) -> getTeamPlayers(won).forEach(p -> {
-                            eco.depositPlayer(p, 3000);
-                            p.sendMessage(mm.build("notify.deposit_points", "3000", mm.build("gui.shop.full_ext")));
-                        }));
+                        getTeamPlayers(won).forEach(p -> {
+                            ANNIPlugin.getInstance().getPointManager().givePoint(p, 3000);
+                            p.sendMessage(tm.component(p, "money.deposit", "3000"));
+                        });
                     } else { // ではない (0 ~ (Integer.MIN_VALUE)) なら
-                        broadcast(mm.build("notify.draw"));
+                        broadcastTranslated("notify.draw");
                     }
 
                     setTimer(ArenaState.GAME_OVER.nextPhaseIn());
@@ -786,7 +684,7 @@ public class ANNIArena extends BukkitRunnable {
                     p.addPotionEffect(new PotionEffect(PotionEffectType.SPEED, 40, 0, false, false, true));
                 }
                 else if (getKit(p).equals(ANNIKit.BOW.getKit()) || hasBow) {
-                    p.addPotionEffect(new PotionEffect(PotionEffectType.SLOW, 40, 0, false, false, true));
+                    p.addPotionEffect(new PotionEffect(PotionEffectType.SLOWNESS, 40, 0, false, false, true));
                 }
             });
         }
@@ -798,156 +696,13 @@ public class ANNIArena extends BukkitRunnable {
 
         cleanUp();
         deleteTeams();
-        bb.setVisible(false);
-        bb.removeAll();
-        Bukkit.removeBossBar(bb.getKey());
-    }
-
-    private void updateBossBar() {
-        players.forEach(bb::addPlayer);
-
-        bb.setColor(BarColor.BLUE);
-        switch (state) {
-            case PHASE_ONE:
-            case PHASE_TWO:
-            case PHASE_THREE:
-            case PHASE_FOUR:
-            case GAME_OVER: {
-                bb.setVisible(true);
-                bb.setTitle(
-                        mm.build("bossbar.timer",
-                                mm.build(state.getName()),
-                                CmnUtil.secminTimer(timer)
-                        )
-                );
-                bb.setProgress(state.nextPhaseIn() > 0 ? CmnUtil.bossBarProgress(state.nextPhaseIn(), timer) : 1);
-                break;
-            }
-            case PHASE_FIVE: {
-                bb.setVisible(true);
-                bb.setTitle(mm.build(state.getName()));
-                bb.setProgress(1);
-                break;
-            }
-            default: {
-                bb.setVisible(false);
-                break;
-            }
-        }
-    }
-
-    private void updateScoreboard() {
-        BoardManager bm = plugin.getBoardManager();
-
-        for (Player pl : players) {
-            try {
-                BoardManager.ANNIFastBoard fb = bm.get(pl);
-                SimpleDateFormat df = new SimpleDateFormat(mm.build("scoreboard.dateformat"));
-
-                switch (state) {
-                    case WAITING:
-                    case STARTING: {
-                        fb.updateTitle(mm.build("scoreboard.title"));
-                        String news = state == ArenaState.STARTING ?
-                                mm.build("scoreboard.waiting.2.starting", CmnUtil.secminTimer(getTimer())) :
-                                mm.build("scoreboard.waiting.2.more_player", (
-                                        enabledTeams.entrySet().stream()
-                                                .filter(Map.Entry::getValue)
-                                                .count() * ANNIConfig.getTeamMinPlayers()
-                                                - players.size())
-                                );
-
-                        if (map != null) {
-                            fb.updateLines(mm.buildList("scoreboard.waiting",
-                                    df.format(Calendar.getInstance().getTime()),
-                                    news,
-                                    players.size() + " / 120",
-                                    map.getName()
-                            ));
-                        } else {
-                            List<Map.Entry<ANNIMap, Integer>> nowRes = getMapRanking(VoteManager.getResult(id));
-                            fb.updateLines(mm.buildList("scoreboard.waiting_voting",
-                                    df.format(Calendar.getInstance().getTime()),
-                                    news,
-                                    players.size() + " / " + (ANNIConfig.getTeamMaxPlayers() * getEnabledTeams().size()),
-                                    !nowRes.isEmpty() ? nowRes.get(0).getKey().getName() + " - " + nowRes.get(0).getValue() : "",
-                                    nowRes.size() > 1 ? nowRes.get(1).getKey().getName() + " - " + nowRes.get(1).getValue() : "",
-                                    nowRes.size() > 2 ? nowRes.get(2).getKey().getName() + " - " + nowRes.get(2).getValue() : ""
-                            ));
-                        }
-                        break;
-                    }
-                    case PHASE_ONE:
-                    case PHASE_TWO:
-                    case PHASE_THREE:
-                    case PHASE_FOUR:
-                    case PHASE_FIVE:
-                    case GAME_OVER: {
-                        if (fb.hasLinesMaxLength()) {
-                            if (map.getName() != null)
-                                fb.updateTitle(mm.build("scoreboard.playing.short.title", map.getName()));
-                            else fb.updateTitle(mm.build("scoreboard.title"));
-                            fb.updateLines(
-                                    mm.buildList(
-                                            "scoreboard.playing.short",
-                                            shortNexusHealth(ANNITeam.RED),
-                                            shortNexusHealth(ANNITeam.BLUE),
-                                            shortNexusHealth(ANNITeam.GREEN),
-                                            shortNexusHealth(ANNITeam.YELLOW)
-                                    )
-                            );
-                        }
-                        else {
-                            fb.updateTitle(mm.build("scoreboard.title"));
-                            fb.updateLines(mm.buildList("scoreboard.playing",
-                                    df.format(Calendar.getInstance().getTime()),
-                                    sbNexusState(ANNITeam.RED),
-                                    sbNexusState(ANNITeam.BLUE),
-                                    sbNexusState(ANNITeam.GREEN),
-                                    sbNexusState(ANNITeam.YELLOW),
-                                    sbNexusHealth(ANNITeam.RED),
-                                    sbNexusHealth(ANNITeam.BLUE),
-                                    sbNexusHealth(ANNITeam.GREEN),
-                                    sbNexusHealth(ANNITeam.YELLOW),
-                                    map != null ? map.getName() : "-----"
-                            ));
-                        }
-                        break;
-                    }
-                    default: {
-                        fb.updateLines(mm.buildList("scoreboard.stopping",
-                                df.format(Calendar.getInstance().getTime())
-                        ));
-                        break;
-                    }
-                }
-            }
-            catch (Exception e) {
-                e.printStackTrace();
-            }
-        }
-    }
-
-    private String sbNexusHealth(ANNITeam team) {
-        Integer nh = getNexusHealth(team);
-        if (nh == null) nh = 0;
-        return isEnabledTeam(team) ? // teamが無効化されていないなら
-                String.format(mm.build("nexus.health.format"), nh) // フォーマット適応済みの体力
-                : mm.build("nexus.health.none"); // 体力なしのメッセージ
-    }
-
-    private String sbNexusState(ANNITeam team) {
-        return isNexusLost(team) ? mm.build("nexus.status.lost") : mm.build("nexus.status.active");
-    }
-
-    private int shortNexusHealth(ANNITeam team) {
-        return getNexusHealth(team) != null ? getNexusHealth(team) : 0;
+        bossbarManager.delete();
     }
 
     private void updatePhase() {
         switch (state) {
             case WAITING: {
-                if (players.size() >= getTeams().size() * 2) {
+                if (players.size() >= teamManager.getTeams().size() * ANNIConfig.getTeamMinPlayers()) {
                     enableTimer();
                     setTimer(ArenaState.STARTING.nextPhaseIn());
                     setState(ArenaState.STARTING);
@@ -955,7 +710,7 @@ public class ANNIArena extends BukkitRunnable {
                 break;
             }
             case STARTING: {
-                if (!(players.size() >= getTeams().size() * 2)) {
+                if (!(players.size() >= teamManager.getTeams().size() * ANNIConfig.getTeamMinPlayers())) {
                     disableTimer();
                     setState(ArenaState.WAITING);
                 }
@@ -980,13 +735,13 @@ public class ANNIArena extends BukkitRunnable {
             case PHASE_FOUR: {
                 enableTimer();
                 if (timer <= 0) {
-                    getTeams().forEach((at, t) -> {
+                    teamManager.getTeams().forEach((at, t) -> {
                         for (String s : mm.buildBigChar(
                                 CmnUtil.numberToChar(state.nextPhase().getId()),
                                 Character.toString(at.getCCChar()),
                                 (Object[]) mm.buildArray("notify.big.next_phase",
-                                    mm.build(state.nextPhase().getName()),
-                                    mm.build(state.nextPhase().getDescription())
+                                    tm.component(state.nextPhase().getName()),
+                                    tm.componentLines(state.nextPhase().getDescription())
                                 )
                         )) {
                             broadcast(s, at);
@@ -1026,18 +781,18 @@ public class ANNIArena extends BukkitRunnable {
         colorMap.put(ANNITeam.GREEN, Color.GREEN);
         colorMap.put(ANNITeam.YELLOW, Color.YELLOW);
 
-        List<ANNITeam> living = getTeams().keySet().stream()
-                .filter(team -> !isNexusLost(team))
-                .collect(Collectors.toList());
+        List<ANNITeam> living = teamManager.getTeams().keySet().stream()
+                .filter(team -> !teamManager.getTeam(team).isLost())
+                .toList();
 
         if (living.size() != 1) return;
 
-        getTeamPlayers(living.get(0)).stream()
+        getTeamPlayers(living.getFirst()).stream()
                 .filter(p -> !SpectatorManager.isSpectating(p.getUniqueId()))
                 .forEach(winner -> {
                         if (winner.getWorld() != copy) return;
 
-                        Firework fw = (Firework) copy.spawnEntity(winner.getLocation(), EntityType.FIREWORK);
+                        Firework fw = (Firework) copy.spawnEntity(winner.getLocation(), EntityType.FIREWORK_ROCKET);
 
                         fw.getPersistentDataContainer().set(
                                 new NamespacedKey(plugin, "winner-rocket"),
@@ -1065,25 +820,14 @@ public class ANNIArena extends BukkitRunnable {
                 });
     }
 
-    private List<Map.Entry<ANNIMap, Integer>> getMapRanking(Multimap<Object, OfflinePlayer> multimap) {
-        Map<ANNIMap, Integer> rank = new HashMap<>();
-        multimap.keySet().forEach((obj) -> {
-            if (!(obj instanceof String)) return;
-            ANNIMap ma = plugin.getMapManager().getMap((String) obj);
-            if (ma != null)
-                rank.put(ma, multimap.get(obj).size());
-        });
-
-
-        LinkedList<Map.Entry<ANNIMap, Integer>> ll = new LinkedList<>(rank.entrySet());
-        ll.sort(Map.Entry.comparingByValue(Comparator.reverseOrder()));
-        return ll;
-    }
-
     private void initPlayer(Player player) {
+        player.setItemOnCursor(null);
         player.getInventory().clear();
+
+        player.getOpenInventory().getTopInventory().clear();
+
         player.getEnderChest().clear();
-        player.setHealth(player.getAttribute(Attribute.GENERIC_MAX_HEALTH).getValue());
+        player.setHealth(player.getAttribute(Attribute.MAX_HEALTH).getValue());
         player.setFoodLevel(20);
         player.setLevel(0);
         player.setExp(0);
@@ -1092,8 +836,8 @@ public class ANNIArena extends BukkitRunnable {
 
     private ANNITeam assignTeam() {
         Map<ANNITeam, Integer> sizeOfTeam = new HashMap<>();
-        getTeams().keySet().stream()
-                .filter(t -> !state.isInArena() || !isNexusLost(t))
+        teamManager.getTeams().keySet().stream()
+                .filter(t -> !state.isInArena() || !teamManager.getTeam(t).isLost())
                 .forEach(t ->
                     sizeOfTeam.put(t, getTeamPlayers(t).size())
                 );
